commiting after deploy

--- a/config.env
+++ b/config.env
@@ -9,9 +9,14 @@ DBUSERNAME = milan
 JWT_SECRET=my-ultra-super-power-super-secure-token
 JWT_EXPIRES_IN = 90d
 
-AWS_ACCESS_KEY_ID=AKIAU24ACCMFHFAXVIM4
-AWS_SECRET_ACCESS_KEY=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
-
+AWS_ACCESS_KEY_ID=AKIAU24ACCMFK4UGN2MA
+AWS_SECRET_ACCESS_KEY=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
 AWS_BUCKET_NAME=mybookproject
 AWS_URL=https://mybookproject.s3.ap-south-1.amazonaws.com
 AWS_REGION=us-east-2
+
+SENDGRID_API_KEY=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
+
+SENDGIRD_USERNAME=apikey
+SENDGRID_PASSWORD=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
+EMAIL_FROM=milanraval08@gmail.com
